# hloa-portfolio

./: .gitignore  BENCHMARK_TESTING.md  README.md  main.py  pyproject.toml  requirements.txt  run_eurostoxx_optimization.py  run_eurostoxx_simple.py  test_hloa_benchmarks.py  test_optimization.py
.github/workflows/: ci.yml
benchmarks/: benchmark_runner.py
docs/: BENCHMARK_TESTING.md
examples/: README.md  benchmarks.py  hloa_benchmarks.ipynb
notebooks/: 01_snippets.ipynb  02_frontier_demo.ipynb
notebooks [IGNORE]/: 00_project_notes.ipynb  01_snippets.ipynb
scripts/: README.md  benchmark_optimization.py  dep_check.py  run_hloa_optimization.py  test_hloa_benchmarks.py  test_optimization.py
src/hloa/: __init__.py  benchmark_runner.py  core.py  ops.py  utils.py
src/portfolio/: constraints.py  data.py  estimators.py  frontier.py  objectives.py  qubo_optimization.py  sharpe.py  sx50.py
tests/: test_constraints.py  test_core.py  test_frontier.py  test_hloa_benchmarks.py  test_hloa_core.py  test_objectives.py  test_ops.py  test_portfolio_optimization.py
