@'
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hloa-portfolio"
version = "0.1.0"
description = "Heuristic/Hybrid optimiser + portfolio utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Carlo Masoni" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "cvxpy>=1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.10",
  "ipykernel"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
'@ | Set-Content pyproject.toml
